--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,38 @@
 
 
 
+
+
+@media (max-width: 678px) {
+  .menu-main {padding-top: 0;}
+  .menu-main li {display: block;}
+  .menu-main li:after {content: none;}
+  .menu-main a {
+    padding: 10px 0 10px; 
+    margin: 0 10px;
+  }
+
+  .menu-main a:before,
+  .menu-main a:after {
+    height: 2px;
+    bottom: 2px;
+
+  }
+
+
+
+  .tournamentscs4{
+    width: 90%;
+  }
+  .tournamentsdbd4{
+    width: 90%;
+  }
+  }
+
+
+  
+
+
 .push { 
   margin-left: 20%;
   margin-right: 20%;
@@ -142,148 +174,194 @@
 .tournamentscs1{
   width: 60%;
   border-radius: 20px;
-  padding: 1vh;
+  margin: 1vh;
+  box-shadow: 0 0 5px  black;
 }
+
+
+.tournamentscs1:hover{
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.589);
+  transition: 0.6s;
+}
+
 
  .tournamentscs2{
   width: 60%;
   border-radius: 20px;
-  padding: 1vh;
+  margin: 1vh;
+  box-shadow: 0 0 5px  black;
  }
+
+ .tournamentscs2:hover{
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.589);
+  transition: 0.6s;
+}
+
+
 .tournamentscs3 {
   width: 60%;
   border-radius: 20px;
-  padding: 1vh;
+  margin: 1vh;
+  box-shadow: 0 0 5px  black;
 }
+
+.tournamentscs3:hover{
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.589);
+  transition: 0.6s;
+}
+
+
 .tournamentscs4 {
   width: 60%;
   border-radius: 20px;
-  padding: 1vh;
+  margin: 1vh;
+  box-shadow: 0 0 5px  black;
+  }
+
+  .tournamentscs4:hover{
+    box-shadow: 0 0 40px rgba(0, 0, 0, 0.589);
+    transition: 0.6s;
   }
 
 
- @media (min-width:1025px) and (max-width:1600px){
-  .tournamentscs1{
-    display: none;
-  }
-  .tournamentscs3{
-    display: none;
-  }
-  .tournamentscs4{
-    display: none;
-  }
-  .tournamentsdbd1{
-    display: none;
-  }
-  .tournamentsdbd3{
-    display: none;
-  }
-  .tournamentsdbd4{
-    display: none;
-  }
-}
-@media (min-width:1600px){
-  .tournamentscs2{
-    display: none;
-  }
-  .tournamentscs3{
-    display: none;
-  }
-  .tournamentscs4{
-    display: none;
-  }
-  .tournamentsdbd2{
-    display: none;
-  }
-  .tournamentsdbd3{
-    display: none;
-  }
-  .tournamentsdbd4{
-    display: none;
-  }
-}
-@media(min-width:768px) and (max-width:1024px){
-  .tournamentscs1{
-    display: none;
-  }
-  .tournamentscs2{
-    display: none;
-  }
-  .tournamentscs4{
-    display: none;
-  }
-  .tournamentsdbd1{
-    display: none;
-  }
-  .tournamentsdbd2{
-    display: none;
-  }
-  .tournamentsdbd4{
-    display: none;
-  }
-}
-@media(max-width:767px){
-  .tournamentscs1{
-    display: none;
-  }
-  .tournamentscs2{
-    display: none;
-  }
-  .tournamentscs3{
-    display: none;
-  }
-
-  .tournamentscs4{
-    width: 80%;
-  }
 
 
-  .tournamentsdbd1{
-    display: none;
-  }
-  .tournamentsdbd2{
-    display: none;
-  }
-  .tournamentsdbd3{
-    display: none;
-  }
-  .tournamentsdbd4{
-    width: 80%;
-  }
-} 
+      @media (min-width:1025px) and (max-width:1600px){
+        .tournamentscs1{
+          display: none;
+        }
+        .tournamentscs3{
+          display: none;
+        }
+        .tournamentscs4{
+          display: none;
+        }
+        .tournamentsdbd1{
+          display: none;
+        }
+        .tournamentsdbd3{
+          display: none;
+        }
+        .tournamentsdbd4{
+          display: none;
+        }
+      }
+      @media (min-width:1601px){
+        .tournamentscs2{
+          display: none;
+        }
+        .tournamentscs3{
+          display: none;
+        }
+        .tournamentscs4{
+          display: none;
+        }
+        .tournamentsdbd2{
+          display: none;
+        }
+        .tournamentsdbd3{
+          display: none;
+        }
+        .tournamentsdbd4{
+          display: none;
+        }
+      }
+      @media(min-width:768px) and (max-width:1024px){
+        .tournamentscs1{
+          display: none;
+        }
+        .tournamentscs2{
+          display: none;
+        }
+        .tournamentscs4{
+          display: none;
+        }
+        .tournamentsdbd1{
+          display: none;
+        }
+        .tournamentsdbd2{
+          display: none;
+        }
+        .tournamentsdbd4{
+          display: none;
+        }
+      }
+      @media(max-width:767px){
+        .tournamentscs1{
+          display: none;
+        }
+        .tournamentscs2{
+          display: none;
+        }
+        .tournamentscs3{
+          display: none;
+        }
+
+        .tournamentscs4{
+          width: 80%;
+        }
+
+
+        .tournamentsdbd1{
+          display: none;
+        }
+        .tournamentsdbd2{
+          display: none;
+        }
+        .tournamentsdbd3{
+          display: none;
+        }
+        .tournamentsdbd4{
+          width: 80%;
+        }
+      } 
 
 .tournamentsdbd1{
   width: 60%;
   border-radius: 20px;
-  padding: 1vh;
+  margin: 1vh;
+  box-shadow: 0 0 5px  black;
+}
+
+.tournamentsdbd1:hover{
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.589);
+  transition: 0.6s;
 }
 .tournamentsdbd2{
   width: 60%;
   border-radius: 20px;
-  padding: 1vh;
+  margin: 1vh;
+  box-shadow: 0 0 5px  black;
 }
+
+.tournamentsdbd2:hover{
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.589);
+  transition: 0.6s;
+}
+
+
 .tournamentsdbd3{
   width: 60%;
   border-radius: 20px;
-  padding: 1vh;
-}
-.tournamentsdbd4{
-  border-radius: 20px;
-  padding: 1vh;
+  margin: 1vh;
+  box-shadow: 0 0 5px  black;
 }
 
-@media (max-width: 550px) {
-  .menu-main {padding-top: 0;}
-  .menu-main li {display: block;}
-  .menu-main li:after {content: none;}
-  .menu-main a {
-    padding: 25px 0 20px; 
-    margin: 0 30px;
-  }
-  .tournamentscs4{
-    width: 90%;
-  }
-  .tournamentsdbd4{
-    width: 90%;
-  }
-  }
+.tournamentsdbd3:hover{
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.589);
+  transition: 0.6s;
+}
+
+
+.tournamentsdbd4{
+  border-radius: 20px;
+  margin: 1vh;
+  box-shadow: 0 0 5px  black;
+}
+
+.tournamentsdbd4:hover{
+  box-shadow: 0 0 40px rgba(0, 0, 0, 0.589);
+  transition: 0.6s;
+}
+
+
