--- a/css/style.css
+++ b/css/style.css
@@ -517,8 +517,9 @@ width: 100%; */
 
 margin-bottom: 2em;
 font-size: 35px;
+font-family: Arial, sans-serif;
 font-weight: normal;
-cursor: pointer;
+cursor: default;
 text-shadow: 1px 1px 0 rgb(0, 0, 0),
              1px -1px 0 rgb(0, 0, 0),
              -1px 1px 0 rgb(0, 0, 0),
