--- a/css/style.css
+++ b/css/style.css
@@ -506,31 +506,194 @@ body.dbdback{
     font-family: Arial, sans-serif;
   }
 
-.admins{
-  /* font-weight: 100;
-  font-size: 1.188em;
-  font-family: Arial, sans-serif;
-background-color: rgb(49, 49, 49);
-color: white;
-padding: 1.55em 0 1.55em 0;
-width: 100%; */
 
-margin-bottom: 2em;
-font-size: 35px;
-font-family: Arial, sans-serif;
-font-weight: normal;
-cursor: default;
-text-shadow: 1px 1px 0 rgb(0, 0, 0),
-             1px -1px 0 rgb(0, 0, 0),
-             -1px 1px 0 rgb(0, 0, 0),
-            -1px -1px 0 rgb(0, 0, 0);
-color: white;
-transition: all 1s;
+  .f-teko {
+    font-family: 'Teko', sans-serif;
+    color: white;
+    font-size: 1.5vw;
+    padding-top: 0.6vw;
+    margin-bottom: -6px;
 }
-.admins:hover {
-  text-shadow: 1px 1px 0 rgb(205, 50, 50),
-               1px -1px 0 rgb(205, 50, 50),
-               -1px 1px 0 rgb(205, 50, 50),
-              -1px -1px 0 rgb(205, 50, 50);
+}
+
+p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+center {
+  text-align: -webkit-center;
+}
+
+.logoCharacter {
+  width: 7vw;
+  height: 7vw;
+  border: 0.2vw solid rgb(120, 231, 29);
+  border-radius: 4vw;
+  margin: 0.5vw;
+  box-shadow: 0 0 20px rgba(120, 231, 29, 0.26);
+}
+
+.flex {
+  display: flex;
+}
+.logoCharacterSt3 {
+  width: 4vw;
+  height: 4vw;
+  border: 0.1vw solid #2090CB;
+  border-radius: 3vw;
+  margin: 0.2vw;
+  box-shadow: 0 0 10px #2090CB;
+}
+
+.logoCharacterSt2 {
+  width: 4vw;
+  height: 4vw;
+  border: 0.1vw solid #CBCB20;
+  border-radius: 3vw;
+  margin: 0.2vw;
+  box-shadow: 0 0 10px #CBCB20;
+}
+.logoCharacterSt1 {
+  width: 4vw;
+  height: 4vw;
+  border: 0.1vw solid #79CB20;
+  border-radius: 3vw;
+  margin: 0.2vw;
+  box-shadow: 0 0 10px #79CB20;
+}
+.logoCharacterSt4 {
+  width: 4vw;
+  height: 4vw;
+  border: 0.1vw solid #9D20CB;
+  border-radius: 3vw;
+  margin: 0.2vw;
+  box-shadow: 0 0 10px #9D20CB;
+}
+.logoCharacterSt5 {
+  width: 4vw;
+  height: 4vw;
+  border: 0.1vw solid #CC0B00;
+  border-radius: 3vw;
+  margin: 0.2vw;
+  box-shadow: 0 0 10px #CC0B00;
+}
+
+
+.three {
+  padding: 50px 20px;
+  text-align: center;
+} 
+.three h1 {
+  font-family: 'Merriweather', serif;
+  position: relative;
+  color: #FCF2E5;
+  background: #90806A;
+  font-size: 2.5em;
+  font-weight: normal;
+  padding: 10px 40px;
+  display: inline-block;
+  margin: 0;
+  line-height: 1;
+}
+.three h1:before {
+  content: ""; 
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  left: 0;
+  bottom: -15px;
+  background: #90806A;
+}
+.three h1:after {
+  content: ""; 
+  position: absolute;
+  height: 0;
+  width: 80%;
+  border-top: 10px solid #90806A;
+  border-left: 12px solid transparent;
+  border-right: 12px solid transparent;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: -25px;
+}
+@media (max-width: 500px) {
+  .three h1 {font-size: 1.8em;}
+}
+@media (max-width: 400px) {
+  .three h1 {
+    font-size: 1.5em;
+    padding: 10px 30px;
+  }
+}
+
+
+.dbdsections{
+  margin: 3em;
+  padding: 80px 30px;
+  width: 50%;
+  background-color: rgba(255, 255, 255, 0);
+  font-family: sans-serif;
   color: rgb(255, 255, 255);
+  border: solid white;
+  border-radius: 30px;
+  font-size: 20px;
+  line-height: 34px;
+  text-decoration: underline;
+  color: rgb(255, 255, 255)
+}
+
+.dbdsections:hover{
+  background-color: rgba(255, 255, 255, 0.877);
+  color: rgb(0, 0, 0);
+  transition: .6s;
+  
+}
+
+
+.col-xs-4 {
+  padding: 50px;
+  width: 50%;
+  color: white;
+  font-family: 'Montserrat',sans-serif;
+}
+.flex {
+  display: flex;
+}
+.itemSingle {
+  margin: 0 10px 10px 0;
+  padding: -3px;
+  width: 3.7vw;
+  height:3.7vw;
+  border: solid #BD1800 2px;
+  border-radius: 100px;
+  box-shadow: 0 0 20px rgba(189, 25, 0, 0.589);
+}
+img {
+  vertical-align: middle;
+}
+img {
+  border: 0;
+}
+.flex-center {
+  align-self: center;
+}
+.redBG {
+  /* border: 0.16vw solid #BD1800; */
+  padding: 4px;
+  border-radius: 0.4vw;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  font-size: 1vw;
+}
+td{
+  padding: 10px;
+}
+.row {
+ background-image: url(http://31.132.156.132/uploads/img/character/trapper.png) ;
+ background-repeat: no-repeat;
 }
