--- a/css/style.css
+++ b/css/style.css
@@ -697,3 +697,55 @@ td{
  background-image: url(http://31.132.156.132/uploads/img/character/trapper.png) ;
  background-repeat: no-repeat;
 }
+
+
+
+
+
+
+.btn {
+	position: relative;
+	height: 100px;
+	line-height: 40px;
+	padding: 0 100px 0 100px;
+	margin-top:  100px;
+	background-color: rgb(255, 223, 223);
+	box-shadow: 0 15px 65px rgba(182, 21, 21, 0.692);
+	border-width: 0;
+	border-radius: 10px;
+	font-family: 'Montserrat Alternates', sans-serif;
+	font-size: 18px;
+	color: rgba(37, 37, 37, 0.767);
+	outline: none;
+	cursor: pointer;
+}
+
+
+.btn:hover{
+
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0 15px 115px rgb(182, 21, 21);
+  transition: .6s;
+
+}
+
+
+.btn:before {
+	content: "\f067";
+	position: absolute;
+	left: 10px;
+	top: 20px;
+	font-family: FontAwesome;
+	color: rgb(168, 35, 35);
+	width: 60px;
+	height: 60px;
+	line-height: 60px;
+	text-align: center;
+	border-radius: 50%;
+	background: transparent;
+	transition: .3s ease-in-out;
+}
+.btn:hover:before {
+	background: rgba(19, 19, 19, 0.178);
+	color: rgb(168, 35, 35);
+}
