--- a/css/style.css
+++ b/css/style.css
@@ -699,8 +699,15 @@ td{
   /* border: 0.1vw solid #2090CB;
   border-radius: 3vw;
   box-shadow: 0 0 10px #2090CB; */
-  text-shadow:0 0 10px rgb(203, 32, 32);
-  font-size: 18px;
+  text-shadow:0 0 40px rgb(203, 32, 32);
+  font-size: 43px;
+  font-family: 'Amatic SC', cursive;
+}
+
+.limited{
+  text-shadow:0 0 50px rgba(225, 177, 5, 0.63);
+  font-size: 43px;
+  font-family: 'Amatic SC', cursive;
 }
 
 hr {
@@ -726,21 +733,23 @@ hr {
 .redBG{
   border: 2.5px solid #BD1800;
   box-shadow:0 0 40px rgba(203, 32, 32, 0.349);
-  padding: 5px 8px 6px 8px;
+  padding: 5px 8px 5px 8px;
   text-overflow: ellipsis;
   overflow: hidden;
   color: white;
-  font-size: 15px;
+  font-size: 23px;
   border-radius: 8px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
 
 .yellowBG {
-  border: 0.16vw solid #E1B005;
-  box-shadow:0 0 40px rgba(203, 32, 32, 0.349);
-  padding: 0.2vw 0.5vw 0.1vw 0.5vw;
-  border-radius: 0.4vw;
-  white-space: nowrap;
+  border: 2.5px solid #E1B005;
+  box-shadow:0 0 40px rgba(225, 177, 5, 0.212);
+  padding: 5px 8px 5px 8px;
   text-overflow: ellipsis;
   overflow: hidden;
-  font-size: 1vw;
+  color: white;
+  font-size: 23px;
+  border-radius: 8px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
 }
